--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "next",
+    "@tanstack/react-query": "^5.39.0",
     "clsx": "^2.1.1",
     "firebase": "^10.12.1",
     "lucide-react": "^0.379.0",
