--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,8 @@ jobs:
         run: |
           bun install --frozen-lockfile
           bun run build
+        env:
+            VITE_FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
 
       - name: Setup Pages ⚙️
         uses: actions/configure-pages@v4
